Feeds: Fixed text alignment

--- a/tim-mobile/timmobile/css/style.css
+++ b/tim-mobile/timmobile/css/style.css
@@ -249,6 +249,7 @@
 .flippage-container .event .content .inner-text {
 	float: left;
 	padding: 10px 10px 10px 10px;
+	text-align: left;
 }
 
 .flippage-container .event .content .inner-image {
